--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ group = 'com.cudo'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+jar {
+    archiveFileName = 'pixel_viewer.jar'
+}
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
