--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,8 +22,10 @@ spring:
       on-profile: default
   datasource:
     url: jdbc:mariadb://106.245.226.42:33306/pixelviewer?serverTimezone=Asia/Seoul&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&autoReconnect=true
-    username: root
-    password: pass0001
+#    username: root
+#    password: pass0001
+    username: pixelviewer
+    password: Pass0001!
     hikari:
       maximum-pool-size: 10
 #      connection-timeout: 300000
