--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'commons-io:commons-io:2.11.0'
 
     // WebClient
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
