--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ dependencies {
 
     // WebClient
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+    // quartz
+    implementation 'org.springframework.boot:spring-boot-starter-quartz:2.7.11'
 }
 
 tasks.named('test') {
