Env : config 처리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,3 +34,14 @@ spring:
 #      minimum-idle: 10
 #      testWhileIdle: true
 #      max-lifetime: 1200000
+
+values:
+  protocol: "http://"
+  was:
+    ip: "106.245.226.42"
+    port: "9898"
+    path: "/api-viewer/"
+  agent:
+    ip: "192.168.123.12"
+    port: "8800"
+    path: "/vieweragent/Preset/layer-placement"
