Externals : 타임아웃 및 retry 옵션 추가

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
     // WebClient
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 
     // quartz
     implementation 'org.springframework.boot:spring-boot-starter-quartz:2.7.11'
